--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chakra-world-trap",
+  "name": "chakra-world-trip",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "swiper": "^6.5.4"
   },
   "devDependencies": {
